##
# This file is part of the pl.wrzasq.commons.
#
# @license http://mit-license.org/ The MIT license
# @copyright 2023, 2025 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[workspace]
members = [
    "wrzasqpl-commons-aws",
    "wrzasqpl-commons-aws-macros",
]
resolver = "3"

[workspace.package]
version = "4.0.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/rafalwrzeszcz-wrzasqpl/wrzasqpl-commons"
homepage = "https://wrzasq.pl/"
readme = "README.md"
authors = [
    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
]
