##
# This file is part of the pl.wrzasq.commons.
#
# @license http://mit-license.org/ The MIT license
# © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "wrzasqpl-commons-aws-macros"
version = "0.1.0"
edition = "2024"
description = "Proc-macro derive utilities for wrzasqpl-commons-aws"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = "1"
syn = { version = "2", features = ["extra-traits", "full"] }

[dev-dependencies]
wrzasqpl-commons-aws = { path = "../wrzasqpl-commons-aws" }
serde = { version = "1", features = ["derive"] }
aws-sdk-dynamodb = "1.92.0"
tokio = { version = "1.47.1", features = ["macros"] }
aws-smithy-runtime = { version = "1.9.1", features = ["client", "connector-hyper-0-14-x"] }
hyper = { version = "0.14.30", features = ["client", "tcp"] }
