##
# This file is part of the pl.wrzasq.commons.
#
# @license http://mit-license.org/ The MIT license
# @copyright 2025 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "wrzasqpl-commons-aws-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "Proc-macro derive utilities for wrzasqpl-commons-aws."
keywords = ["aws", "lambda", "dynamodb"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.103", default-features = false }
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full", "extra-traits"] }
