##
# This file is part of the pl.wrzasq.commons.
#
# @license http://mit-license.org/ The MIT license
# @copyright 2023 - 2025 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "wrzasqpl-commons-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "AWS-related utility functions for commor routines."
keywords = ["aws", "lambda", "dynamodb"]

[dependencies]
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.102.0"
aws-smithy-runtime-api = "1.10.0"
env_logger = "0.11.8"
futures = "0.3.31"
lambda_runtime = "1.0.2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-core = "0.1.36"
tracing-subscriber = "0.3.22"
xray-tracing = "0.0.1"
wrzasqpl-commons-aws-macros = { workspace = true, optional = true }

[dev-dependencies]
aws-smithy-types = "1.3.4"
test-context = "0.5.4"
tokio = { version = "1.49.0", features = ["macros"] }
uuid = { version = "1.19.0", features = ["serde"] }
wrzasqpl-commons-aws-macros = { workspace = true }

[features]
default = []
derive = ["dep:wrzasqpl-commons-aws-macros"]
