##
# This file is part of the pl.wrzasq.commons.
#
# @license http://mit-license.org/ The MIT license
# @copyright 2023 - 2026 © by Rafał Wrzeszcz - Wrzasq.pl.
##

[package]
name = "wrzasqpl-commons-aws"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
description = "AWS-related utility functions for commor routines."
keywords = ["aws", "lambda", "dynamodb"]

[dependencies]
aws-config = "1.8.15"
aws-sdk-dynamodb = "1.109.0"
aws-smithy-runtime-api = "1.11.6"
futures = "0.3.32"
lambda_runtime = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
xray-tracing = "0.0.1"
wrzasqpl-commons-aws-macros = { workspace = true, optional = true }

[dev-dependencies]
aws-smithy-types = "1.4.7"
test-context = "0.5.5"
tokio = { version = "1.50.0", features = ["macros"] }
uuid = { version = "1.22.0", features = ["serde"] }
wrzasqpl-commons-aws-macros = { workspace = true }

[features]
default = []
derive = ["dep:wrzasqpl-commons-aws-macros"]
